Bugfix: Properly recalculating visible region on window resize. Enabled artboard layout in document viewer.

--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -25,12 +25,10 @@
                     <md-icon md-svg-src="app/resources/img/icons/layout-dual.svg" style="margin-right: 6px;"></md-icon>
                     <span translate>Two Pages</span>
                 </md-option>
-                <!--
-                <md-option value="artboard">
-                    <md-icon md-font-icon="zmdi zmdi-n-3-square"></md-icon>
+                <md-option value="all">
+                    <md-icon md-svg-src="app/resources/img/icons/layout-all.svg" style="margin-right: 6px;"></md-icon>
                     <span translate>All Pages</span>
                 </md-option>
-                -->
             </md-select>
         </div>
         <div class="toolbar toolbar-floating">
