--- a/Journal/app/directives/art-chat-comment/art-chat-comment.html
+++ b/Journal/app/directives/art-chat-comment/art-chat-comment.html
@@ -2,7 +2,7 @@
 <div class="comment-container">
     <div class="comment comment-item" ng-class="{'comment-user': t.isUser, 'comment-request': t.isRequest}">
         <div class="comment-avatar">
-            <art-user-photo-img src="t.getPhotoUrl(t.comment.agent)" width="32" height="32"></art-user-photo-img>
+            <art-avatar src="t.getPhotoUrl(t.comment.agent)" width="32" height="32"></art-avatar>
         </div>
         <div class="comment-bubble">
             <div class="bubble-content"><span class="text" emojione="{{t.comment.message}}"></span></div>
