--- a/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
+++ b/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
@@ -1,5 +1,5 @@
 <form name="form">
-    <div class="padding-y-md" layout="row" layout-align="start center">
+    <div layout="row" layout-align="start center" style="min-height: 75px">
         <div translate flex>
             Connect your online accounts to benefit from additional features:
         </div>
