--- a/Journal/app/directives/art-settings-apps/art-settings-apps.html
+++ b/Journal/app/directives/art-settings-apps/art-settings-apps.html
@@ -1,5 +1,5 @@
 <form name="appsForm">
-    <div class="padding-y-md" layout="row" layout-align="start center">
+    <div layout="row" layout-align="start center" style="min-height: 75px">
         <div translate flex>
             Enable or disable the Artivity for the following applications:
         </div>
