--- a/Journal/app/directives/art-settings-user/art-settings-user.html
+++ b/Journal/app/directives/art-settings-user/art-settings-user.html
@@ -1,5 +1,5 @@
 <form name="userForm">
-    <div class="padding-y-md" layout="row" layout-align="start center">
+    <div layout="row" layout-align="start center" style="min-height: 75px">
         <div ng-show="!t.setup" translate flex>
             Edit the profile information that is published when you share files with others:
         </div>
@@ -35,8 +35,8 @@
     </div>
 
     <div layout="row">
-        <div style="min-width: 120px">
-            <art-user-photo-img src="t.userPhotoUrl" width="100" height="100" can-change="!t.readonly" changed="t.onPhotoChanged"></art-user-photo-img>
+        <div flex="20" style="text-align: center; min-width: 120px">
+            <art-avatar src="t.userPhotoUrl" width="100" height="100" can-change="true" changed="t.onPhotoChanged"></art-avatar>
         </div>
 
         <div flex="50">
