--- a/Journal/app/directives/art-user-menu/art-user-menu.html
+++ b/Journal/app/directives/art-user-menu/art-user-menu.html
@@ -1,6 +1,4 @@
-<div class="toolbar toolbar-header pull-right">
-    <a class="btn btn-header btn-user-menu" ui-sref="settings.profile">
-        <art-user-photo-img src="t.photoUrl" width="24" height="24" class="icn icn-circle icn-user pull-left"></art-user-photo-img>
-        <label ng-bind="t.name" class="btn-label"></label>
-    </a>
-</div>
+<md-button layout="row" ui-sref="main.view.settings.profile">
+    <art-avatar src="t.photoUrl" width="24" height="24"></art-avatar>
+    <span class="label" flex>{{t.name}}</span>
+</md-button>
