--- a/Journal/app/directives/arto-settings-user/arto-settings-user.html
+++ b/Journal/app/directives/arto-settings-user/arto-settings-user.html
@@ -6,7 +6,7 @@
     <div class="clearfix"></div>
 
     <div class="form-group pull-left">
-        <art-user-photo-img src="t.photoUrl" width="100" height="100" changed="onPhotoChanged"></art-user-photo-img>
+        <art-avatar src="t.photoUrl" width="100" height="100" changed="onPhotoChanged"></art-avatar>
     </div>
 
     <div class="table-cell padding-x-xl" style="padding-top: 10px; width: 450px;">
