Tabs working properly again.

--- a/Journal/app/states/settings/settings.html
+++ b/Journal/app/states/settings/settings.html
@@ -5,6 +5,7 @@
         </md-button>
 
         <div class="title" flex>
+            <md-icon md-font-icon="zmdi zmdi-settings"></md-icon>
             <span translate>Settings</span>
         </div>
 
