--- a/Journal/app/states/main/main.html
+++ b/Journal/app/states/main/main.html
@@ -1,18 +1,5 @@
-<md-tabs class="header-tabs" md-selected="t.selectedTab" md-no-ink md-no-ink-bar>
-    <md-tab ng-repeat="tab in t.tabs track by $index">
-        <md-tab-label ng-model="t.droppedFile" data-drop="true" data-jqyoui-options="{hoverClass: 'drop-target-valid', tolerance: 'pointer'}"
-            jqyoui-droppable="{onDrop: 't.onFileDropped'}">
-            <div layout="row" layout-align="start center" ng-click="t.activateTab($event, $index)">
-                <md-icon ng-if="tab.icon" md-font-icon="{{tab.icon.class}}"></md-icon>
+<div class="layout-root" layout="column">
+    <art-project-tabs></art-project-tabs>
 
-                <span ng-if="tab.title" style="text-align: left; min-width: 100px;" flex>{{tab.title}}</span>
-
-                <md-button md-no-ink ng-if="tab.closable" ng-click="t.removeTab($event, $index)" class="md-icon-button no-margin">
-                    <md-icon md-font-icon="zmdi zmdi-close"></md-icon>
-                </md-button>
-            </div>
-        </md-tab-label>
-    </md-tab>
-</md-tabs>
-
-<div ui-view id="tab-content"></div>
+    <div ui-view id="tab-content" flex></div>
+</div>
