--- a/Journal/index.html
+++ b/Journal/index.html
@@ -156,6 +156,7 @@
 	<script type="text/javascript" src="app/directives/art-layer-control/art-layer-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-localization-handler/art-localization-handler.js"></script>
 	<script type="text/javascript" src="app/directives/art-project-settings/art-project-settings.js"></script>
+	<script type="text/javascript" src="app/directives/art-project-tabs/art-project-tabs.js"></script>
 	<script type="text/javascript" src="app/directives/art-query-editor/art-query-editor.js"></script>
 	<script type="text/javascript" src="app/directives/art-search-input/art-search-input.js"></script>
 	<script type="text/javascript" src="app/directives/art-settings-accounts/art-settings-accounts.js"></script>
