Implemented delete project dialog.

--- a/Journal/app/directives/art-file-list/art-file-list.html
+++ b/Journal/app/directives/art-file-list/art-file-list.html
@@ -9,7 +9,7 @@
     </md-autocomplete>
     <span flex></span>
     <mb-button class="md-button md-button-icon" ng-click="t.onMoreClicked()">
-        <i class="zmdi zmdi-more-vert"></i>
+        <i class="zmdi zmdi-more"></i>
     </mb-button>
 </div>
 
