--- a/Journal/app/states/start/start.html
+++ b/Journal/app/states/start/start.html
@@ -14,10 +14,10 @@
 
 			<p><small><label class="text-label">ERR_NO_APID_CONNECTION</label></small></p>
 
-			<a id="retry" class="btn btn-default" ng-click="t.retry()">
-				<i class="zmdi zmdi-refresh-sync"></i>
+			<md-button ng-click="t.retry()">
+				<md-icon md-font-icon="zmdi zmdi-refresh-sync"></md-icon>
 				<span translate>Retry</span>
-			</a>
+			</md-button>
 		</div>
 	</div>
 </div>
