--- a/Journal/app/states/settings/settings.html
+++ b/Journal/app/states/settings/settings.html
@@ -14,7 +14,7 @@
         </md-button>
     </div>
     <div class="container padding-y-xl" flex>
-        <md-tabs layout="column" md-dynamic-height md-border-bottom layout-fill flex>
+        <md-tabs layout="column" md-border-bottom layout-fill flex>
             <md-tab>
                 <md-tab-label>
                     <div class="padding-x-xl">
