--- a/Journal/app/directives/art-file-card/art-file-card.html
+++ b/Journal/app/directives/art-file-card/art-file-card.html
@@ -2,7 +2,7 @@
     <md-card class="card" style="position: relative; overflow: hidden">
         <img ng-src="{{t.file.thumbnail}}" class="md-card-image" alt="{{t.file.label}}" ng-click="t.viewFile($event)" ng-right-click="t.showSheet($event)">
 
-        <span class="card-title" md-highlight-text="t.highlightText">{{t.file.label}}</span>
+        <h4 class="md-padding no-margin" md-highlight-text="t.highlightText">{{t.file.label}}</h4>
 
         <md-button ng-click="t.showSheet($event)">
             <md-icon md-font-icon="zmdi zmdi-more"></md-icon>
