Reduced base font size.

--- a/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
+++ b/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
@@ -22,7 +22,9 @@
                 </div>
             </div>
             <div class="col col-btn" style="vertical-align: middle">
-                <button class="btn btn-md" ng-click="uninstallAccount(a)"><i class="zmdi zmdi-close zmdi-sm"></i></button>
+                <md-button class="md-button-icon" ng-click="uninstallAccount(a)">
+                    <md-icon md-font-icon="zmdi zmdi-close"></md-icon>
+                </md-button>
             </div>
         </li>
     </ul>
