--- a/Journal/app/directives/art-editing-history/art-editing-history.html
+++ b/Journal/app/directives/art-editing-history/art-editing-history.html
@@ -31,7 +31,7 @@
                     <span translate>Redo</span>
                 </label>
                     <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Generation">
-                    <i class="zmdi zmdi-plus"></i>
+                    <i class="zmdi zmdi-brush"></i>
                     <span translate>Created element</span>
                 </label>
                     <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Invalidation">
