--- a/Journal/index.html
+++ b/Journal/index.html
@@ -200,21 +200,23 @@
 
 <body id="window" art-keyboard-input-handler art-localization-handler>
 	<div class="layout-root">
-		<div class="window-title-container" id="window-title">
-			<div art-window-controls></div>
-			<div class="window-title-btns pull-left">
-				<button class="btn-title btn-info" id="btn-sync">
+		<div class="window-title-container">
+			<div id="window-title">
+				<div art-window-controls></div>
+				<div class="window-title-btns pull-left">
+					<button class="btn-title btn-info" id="btn-sync">
 					<art-sync-indicator></art-sync-indicator>
 				</button>
-			</div>
-			<div class="window-title-btns pull-right">
-				<button class="btn-title btn-info" id="btn-update">
+				</div>
+				<div class="window-title-btns pull-right">
+					<button class="btn-title btn-info" id="btn-update">
 					<art-update-indicator></art-update-indicator>
 				</button>
-			</div>
-			<div id="window-title-text">
-				<span><img src="app/resources/img/artivity.png" width="64" height="20" alt="artivity"/></span>
-				<span style="background: #f87806; border-radius: 2px; font-size: 10px; color: white; padding: 1px 3px; margin-left: 5px; position: relative; top: -2px;">BETA</span>
+				</div>
+				<div id="window-title-text">
+					<span><img src="app/resources/img/artivity.png" width="64" height="20" alt="artivity"/></span>
+					<span style="background: #f87806; border-radius: 2px; font-size: 10px; color: white; padding: 1px 3px; margin-left: 5px; position: relative; top: -2px;">BETA</span>
+				</div>
 			</div>
 		</div>
 		<div class="window-view-container" id="window-view-container">
