--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -1,20 +1,5 @@
 <div class="layout-root" layout="column">
     <div layout="row" layout-align="start start">
-        <div class="toolbar toolbar-floating">
-            <md-button class="md-button-icon" data-command="viewerSelect" style="transform: scaleX(-1)">
-                <md-icon md-svg-src="app/resources/img/icons/pointer.svg"></md-icon>
-                <md-tooltip translate>Select</md-tooltip>
-            </md-button>
-            <md-button class="md-button-icon" data-command="viewerPan">
-                <md-icon md-svg-src="app/resources/img/icons/hand.svg"></md-icon>
-                <md-tooltip translate>Move canvas</md-tooltip>
-            </md-button>
-            <md-button class="md-button-icon" data-command="createMark" data-param="t.viewer.entity">
-                <md-icon md-svg-src="app/resources/img/icons/marker-region.svg"></md-icon>
-                <md-tooltip translate>Rectangle marker</md-tooltip>
-            </md-button>
-        </div>
-        <div flex></div>
         <div class="toolbar toolbar-floating" style="margin-right: 3px;">
             <md-select ng-model="t.layout" ng-change="t.onPageLayoutChanged()" class="md-no-underline">
                 <md-option value="single" translate>
@@ -31,7 +16,20 @@
                 </md-option>
             </md-select>
         </div>
-        <div class="toolbar toolbar-floating">
+        <div class="toolbar toolbar-floating" style="margin-right: 3px;">
+            <md-button class="md-button-icon" data-command="viewerPagePrevious">
+                <md-icon md-svg-src="app/resources/img/icons/chevron-left-o.svg"></md-icon>
+                <md-tooltip translate>Previous page</md-tooltip>
+            </md-button>
+            <md-button class="md-button-icon">
+                {{t.currentPage}} / {{t.pageCount}}
+            </md-button>
+            <md-button class="md-button-icon" data-command="viewerPageNext">
+                <md-icon md-svg-src="app/resources/img/icons/chevron-right-o.svg"></md-icon>
+                <md-tooltip translate>Next page</md-tooltip>
+            </md-button>
+        </div>
+        <div class="toolbar toolbar-floating" style="margin-right: 3px;">
             <md-button class="md-button-icon" data-command="viewerZoomIn">
                 <md-icon md-svg-src="app/resources/img/icons/plus-o.svg"></md-icon>
                 <md-tooltip translate>Zoom in</md-tooltip>
@@ -41,20 +39,22 @@
                 <md-tooltip translate>Zoom out</md-tooltip>
             </md-button>
         </div>
-    </div>
-    <div flex></div>
-    <div layout="row" layout-align="center center">
-        <div class="toolbar toolbar-floating">
-            <md-button class="md-button-icon" data-command="viewerPagePrevious">
-                <md-icon md-svg-src="app/resources/img/icons/chevron-left-o.svg"></md-icon>
-                <md-tooltip md-direction="top" translate>Previous page</md-tooltip>
+        <div class="toolbar toolbar-floating" style="margin-right: 3px;">
+            <md-button class="md-button-icon" data-command="viewerSelect" style="transform: scaleX(-1)">
+                <md-icon md-svg-src="app/resources/img/icons/pointer.svg"></md-icon>
+                <md-tooltip translate>Select</md-tooltip>
             </md-button>
-            <md-button class="md-button-icon">
-                {{t.currentPage}} / {{t.pageCount}}
+            <md-button class="md-button-icon" data-command="viewerPan">
+                <md-icon md-svg-src="app/resources/img/icons/hand.svg"></md-icon>
+                <md-tooltip translate>Move canvas</md-tooltip>
             </md-button>
-            <md-button class="md-button-icon" data-command="viewerPageNext">
-                <md-icon md-svg-src="app/resources/img/icons/chevron-right-o.svg"></md-icon>
-                <md-tooltip md-direction="top" translate>Next page</md-tooltip>
+            <md-button class="md-button-icon" data-command="createPointMark" data-param="t.viewer.entity">
+                <md-icon md-font-icon="zmdi zmdi-pin"></md-icon>
+                <md-tooltip translate>Mark spot</md-tooltip>
+            </md-button>
+            <md-button class="md-button-icon" data-command="createRectangleMark" data-param="t.viewer.entity">
+                <md-icon md-svg-src="app/resources/img/icons/marker-region.svg"></md-icon>
+                <md-tooltip translate>Highlight region</md-tooltip>
             </md-button>
         </div>
     </div>
