Fixed avatar button in setup. Hide 'backup Profile' button in setup.

--- a/Journal/app/directives/art-avatar/art-avatar.html
+++ b/Journal/app/directives/art-avatar/art-avatar.html
@@ -1,5 +1,5 @@
 <md-button class="md-button-avatar" ng-disabled="!t.canChange">
     <input type="file" accept="image/*" style="display: none;"/>
 
-    <img class="md-avatar" width={{t.width}} height="{{t.height}}" ng-src="{{t.src}}" ng-error-src="app/resources/img/placeholder-avatar.png">
+    <img class="md-avatar" width={{t.width}} height="{{t.height}}">
 </md-button>
