--- a/Journal/app/directives/art-settings-user/art-settings-user.html
+++ b/Journal/app/directives/art-settings-user/art-settings-user.html
@@ -1,38 +1,42 @@
 <form name="userForm">
-    <div layout="row" layout-align="start center" style="min-height: 75px">
-        <div ng-show="!t.setup" translate flex>
-            Edit the profile information that is published when you share files with others:
-        </div>
-
-        <div ng-switch="t.backupStatus">
-            <div ng-switch-when="null">
-                <md-button ng-click="t.createBackup()">
-                    <md-icon md-font-icon="zmdi zmdi-account-box-o"></md-icon>
-                    <span translate>Backup profile</span>
-                </md-button>
+    <div class="form-header">
+        <div layout="row" layout-align="start center" style="min-height: 75px" ng-show="!t.setup">
+            <div flex translate>
+                Edit the profile information that is published when you share files with others:
             </div>
-            <div ng-switch-default>
-                <div ng-switch="t.backupStatus.Error">
-                    <div ng-switch-when="null">
-                        <div ng-if="t.backupStatus.PercentComplete < 100">
-                            <i class="loader loader-xs"></i>
-                            <span translate>Creating backup..</span>
-                            <span ng-bind="backupStatus.PercentComplete"></span>%
+
+            <div ng-switch="t.backupStatus">
+                <div ng-switch-when="null">
+                    <md-button ng-click="t.createBackup()">
+                        <md-icon md-font-icon="zmdi zmdi-account-box-o"></md-icon>
+                        <span translate>Backup profile</span>
+                    </md-button>
+                </div>
+                <div ng-switch-default>
+                    <div ng-switch="t.backupStatus.Error">
+                        <div ng-switch-when="null">
+                            <div ng-if="t.backupStatus.PercentComplete < 100">
+                                <i class="loader loader-xs"></i>
+                                <span translate>Creating backup..</span>
+                                <span ng-bind="backupStatus.PercentComplete"></span>%
+                            </div>
+                            <div ng-if="t.backupStatus.PercentComplete >= 100">
+                                <i class="zmdi zmdi-check-circle"></i>
+                                <span translate>Successfully created backup.</span>
+                            </div>
                         </div>
-                        <div ng-if="t.backupStatus.PercentComplete >= 100">
-                            <i class="zmdi zmdi-check-circle"></i>
-                            <span translate>Successfully created backup.</span>
+                        <div ng-switch-default>
+                            <i class="zmdi zmdi-alert-circle"></i>
+                            <span translate>Error when creating backup:</span>
+                            <span ng-bind="t.backupStatus.Error"></span>
                         </div>
-                    </div>
-                    <div ng-switch-default>
-                        <i class="zmdi zmdi-alert-circle"></i>
-                        <span translate>Error when creating backup:</span>
-                        <span ng-bind="t.backupStatus.Error"></span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="clearfix"></div>
 
     <div layout="row">
         <div flex="20" style="text-align: center; min-width: 120px">
@@ -63,9 +67,9 @@
             <div class="form-group">
                 <label for="locale" translate>Language</label>
                 <select class="form-control" ng-model="t.selectedLocale" ng-change="t.setLocale(t.selectedLocale, true)">
-                <option value="en-GB" ng-selected="t.selectedLocale === 'en-GB'">English (UK)</option>
-                <option value="de-DE" ng-selected="t.selectedLocale === 'de-DE'">Deutsch</option>
-            </select>
+                    <option value="en-GB" ng-selected="t.selectedLocale === 'en-GB'">English (UK)</option>
+                    <option value="de-DE" ng-selected="t.selectedLocale === 'de-DE'">Deutsch</option>
+                </select>
             </div>
         </div>
     </div>
