--- a/Journal/app/states/settings/settings.html
+++ b/Journal/app/states/settings/settings.html
@@ -1,6 +1,7 @@
 <div class="layout-root" layout="column">
+    <!--
     <div class="md-toolbar" layout="row" layout-align="start center">
-        <md-button class="md-button-icon" ng-click="t.submitAndReturn()" ui-sref="main.view.dashboard">
+        <md-button class="md-button-icon" ng-click="t.submitAndReturn()" ui-sref="main.view.recently-used">
             <md-icon md-font-icon="zmdi zmdi-chevron-left"></md-icon>
         </md-button>
 
@@ -9,10 +10,11 @@
             <span translate>Settings</span>
         </div>
 
-        <md-button ui-sref="main.view.dashboard">
+        <md-button ui-sref="main.view.recently-used">
             <span translate>Cancel</span>
         </md-button>
     </div>
+    -->
     <div class="container padding-y-xl" flex>
         <md-tabs layout="column" md-border-bottom layout-fill flex>
             <md-tab>
